# 2026Obstacle-race

./: .gitignore  README.md  start.sh  start_local.sh  start_ssh.sh  start_tmux.sh
docs/: 导航指南.md  建图指南.md  技术文档.md
maps/: README.txt  field_map.yaml
scripts/: debug_monitor.sh  save_map.sh  start_nav.sh  test_apriltag.sh  test_perception.sh  waypoint_nav.sh
src/bringup/robocon_bringup/: CMakeLists.txt  package.xml
src/bringup/robocon_bringup/config/: rviz_config.rviz
src/bringup/robocon_bringup/launch/: localization.launch.py  master.launch.py  navigation.launch.py  perception.launch.py  static_tfs.launch.py
src/control/robocon_command_bridge/: CMakeLists.txt  package.xml
src/control/robocon_command_bridge/include/robocon_command_bridge/: command_bridge.hpp
src/control/robocon_command_bridge/src/: command_bridge_node.cpp
src/control/robocon_localization/: CMakeLists.txt  package.xml
src/control/robocon_localization/config/: localization_params.yaml
src/control/robocon_localization/include/robocon_localization/: localization_manager.hpp
src/control/robocon_localization/src/: localization_manager_node.cpp
src/control/robocon_state_machine/: CMakeLists.txt  package.xml
src/control/robocon_state_machine/config/: mission_params.yaml  waypoints.yaml
src/control/robocon_state_machine/include/robocon_state_machine/: mission_fsm.hpp  obstacle_handler.hpp
src/control/robocon_state_machine/include/robocon_state_machine/handlers/: bridge_handler.hpp  gravel_pit_handler.hpp  height_bar_handler.hpp  high_wall_handler.hpp  pole_weave_handler.hpp  slope_handler.hpp  t_steps_handler.hpp
src/control/robocon_state_machine/scripts/: waypoint_nav_node.py
src/control/robocon_state_machine/src/: mission_fsm_main.cpp  mission_fsm_node.cpp  obstacle_handler.cpp
src/control/robocon_state_machine/src/handlers/: bridge_handler.cpp  gravel_pit_handler.cpp  height_bar_handler.cpp  high_wall_handler.cpp  pole_weave_handler.cpp  slope_handler.cpp  t_steps_handler.cpp
src/interface/robocon_interfaces/: CMakeLists.txt  package.xml
src/interface/robocon_interfaces/msg/: ObstacleInfo.msg  RobotCommand.msg  RobotStatus.msg  TagDetection.msg  TagDetectionArray.msg
src/lio/FAST_LIO/config/: mid360.yaml
src/localization/open3d_loc/: CMakeLists.txt
src/localization/open3d_loc/config/: loc_param_g1.yaml
src/localization/open3d_loc/launch/: open3d_loc.launch.py  open3d_loc_g1.launch.py
src/localization/open3d_loc/rviz_cfg/: fastlio.rviz
src/localization/open3d_loc/src/: global_localization.cpp
src/mapper/pcd2pgm/config/: pcd.yaml
src/mapper/pcd2pgm/src/: pcd2pgm.cpp
src/navigation/robot_navigation2/config/: nav2_params.yaml
src/navigation/robot_navigation2/launch/: navigation2.launch.py
src/navigation/robot_navigation2/maps/: map.pgm  map.yaml
src/perception/robocon_perception/: CMakeLists.txt  package.xml
src/perception/robocon_perception/config/: obstacle_params.yaml
src/perception/robocon_perception/include/robocon_perception/: ground_segmenter.hpp  object_classifier.hpp  obstacle_detector.hpp
src/perception/robocon_perception/src/: ground_segmenter.cpp  object_classifier.cpp  obstacle_detector_main.cpp  obstacle_detector_node.cpp
src/registration/icp_registration/config/: icp.yaml
src/vision/robocon_apriltag/: CMakeLists.txt  package.xml
src/vision/robocon_apriltag/config/: d455_intrinsics.yaml  tag_world_poses.yaml
src/vision/robocon_apriltag/include/robocon_apriltag/: tag_pose_corrector.hpp
src/vision/robocon_apriltag/launch/: apriltag.launch.py
src/vision/robocon_apriltag/src/: apriltag_detector_node.py  tag_pose_corrector_node.cpp
