<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocon_bringup</name>
  <version>0.1.0</version>
  <description>Robocon 2026 障碍赛的启动文件和配置</description>
  <maintainer email="dandelion@example.com">dandelion</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robocon_perception</exec_depend>
  <exec_depend>robocon_apriltag</exec_depend>
  <exec_depend>robocon_state_machine</exec_depend>
  <exec_depend>robocon_localization</exec_depend>
  <exec_depend>robocon_command_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
