<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocon_command_bridge</name>
  <version>0.1.0</version>
  <description>命令桥接: 在 Nav2 /cmd_vel 和直接 /robot_command 之间进行仲裁</description>
  <maintainer email="dandelion@example.com">dandelion</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>robocon_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
