<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocon_state_machine</name>
  <version>0.1.0</version>
  <description>Robocon 2026 障碍赛任务状态机</description>
  <maintainer email="dandelion@example.com">dandelion</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>robocon_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
